--- a/package.json
+++ b/package.json
@@ -58,12 +58,14 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^10.16.4",
     "input-otp": "^1.4.2",
+    "js-cookie": "^3.0.5",
     "lenis": "^1.3.8",
     "lucide-react": "^0.561.0",
     "motion": "^12.23.26",
     "nanoid": "^5.1.6",
     "next": "14.0.0",
     "next-themes": "^0.4.6",
+    "pdf-lib": "^1.17.1",
     "pdf-parse": "^2.4.5",
     "react": "^18",
     "react-day-picker": "^9.12.0",
@@ -84,7 +86,8 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/js-cookie": "^3.0.6",
+    "@types/node": "^20.19.27",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
