--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "lenis": "^1.3.8",
+    "libphonenumber-js": "^1.12.33",
     "lucide-react": "^0.561.0",
     "motion": "^12.23.26",
     "nanoid": "^5.1.6",
@@ -71,9 +72,11 @@
     "react-day-picker": "^9.12.0",
     "react-dom": "^18",
     "react-hook-form": "^7.68.0",
+    "react-international-phone": "^4.6.1",
     "react-intersection-observer": "^9.5.2",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.4",
+    "resend": "^6.6.0",
     "shiki": "^3.20.0",
     "sonner": "^2.0.7",
     "streamdown": "^1.6.10",
